<resources>
    <string name="app_name">Climber\'s Hangout</string>
    <string name="title_activity_main">Dashboard</string>
    <string name="action_settings">Settings</string>
    <string name="activity_type_hangboard">Hangboard</string>
    <string name="activity_type_campus">Campus</string>
    <string name="activity_type_indoor">Indoor</string>
    <string name="activity_type_outdoor">Outdoor</string>
    <string name="dashboard">Dashboard</string>
    <string name="trainings">Timed training</string>
    <string name="start">Start</string>
    <string name="training">Training</string>
    <string name="friends">Friends</string>
    <string name="goals">Goals</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="training_interrupted">Stopped</string>
    <string name="training_completed_successfully">Completed</string>
    <string name="title_activity_train">TrainActivity</string>
    <string name="counter">Counter</string>

    <string name="roboto_light">sans-serif-light</string>

    <string name="action_board">Board</string>
    <string name="settings">Settings</string>
    <string name="settings_vibrate_when_notifying">Vibrate as notification</string>
    <string name="settings_sound_prep">Preparation</string>
    <string name="settings_sound_work">Work</string>
    <string name="settings_sound_rest">Rest</string>
    <string name="settings_sound_pause">Pause</string>
    <string name="settings_tone_volume">Volume</string>
    <string name="settings_theme">Theme</string>
    <string name="save_completed_workout">Do you want to save completed workout?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="save_completed_workout_title">Save</string>
    <string name="activity_period_week">Week</string>
    <string name="activity_period_month">Month</string>
    <string name="activity_period_year">Year</string>
    <string name="activity_period_total">Total</string>
    <string name="duration">duration: </string>
    <string name="loop_training">loop training</string>
    <string name="current">This</string>
    <string name="last">Last</string>
    <string name="all_time_total">All Time Total</string>
    <string name="workouts">Workouts</string>
    <string name="logged">Logged</string>
    <string name="add_training_title">Add Training</string>
    <string name="exercise_list">Exercises</string>
    <string name="review_training_preparation">Preparation</string>
    <string name="add_training_discard">Discard Training</string>
    <string name="edit_exercise_loop">Loop until stopped</string>
    <string name="debug">DEBUG</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="facebook_app_id">341603059597613</string>
    <string name="fb_login_protocol_scheme">fb341603059597613</string>
    <string name="sign_out">Sign out</string>
    <string name="climb">Climb</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_route">AddRouteActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_add_route_summary">Route summary</string>
    <string name="action_add_route_details">Route details</string>
    <string name="action_add_route">Add route</string>
    <string name="add_route_discard">Discard</string>
    <string name="add_route_title">Add route</string>
    <string name="action_route_list">Route list</string>
    <string name="hint_name">Name</string>
    <string name="hint_description">Description</string>
    <string name="add_route_open_feet">Open feet</string>
    <string name="warning_click_in_bounds">Please click in image bounds to add hold.</string>
    <string name="error_unable_to_create_request_image_intent">Unable to request an image.</string>
    <string name="message">Info</string>
    <string name="error">Error</string>
    <string name="button_from_gallery">Gallery</string>
    <string name="action_delete">Delete</string>
</resources>
