<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/drawer_menu_group_feature"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dashboard_fragment"
            android:title="@string/dashboard"/>
    </group>

    <group
        android:id="@+id/nav_climb_fragment"
        android:checkableBehavior="single"
        android:title="@string/climb">

            <item
                android:id="@+id/nav_route_list_fragment"
                android:title="@string/action_route_list" />

            <item
                android:id="@+id/action_add_route"
                android:title="@string/action_add_route" />

    </group>

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_trainings_fragment"
            android:title="@string/trainings"/>

    </group>

    <group
        android:id="@+id/drawer_menu_group_settings"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_settings_fragment"
            android:title="@string/settings"/>

    </group>

    <group
        android:id="@+id/drawer_menu_group_debug"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_debug_fragment"
            android:title="@string/debug" />

    </group>

    <group
        android:id="@+id/drawer_menu_group_sign_out"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_sign_out"
            android:title="@string/sign_out" />

    </group>

</menu>