<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.climbershangout.climbershangout.MainActivity">

    <item
        android:id="@+id/action_board"
        android:orderInCategory="1"
        android:title="@string/action_board"
        android:icon="@drawable/ic_board"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/action_counter"
        android:orderInCategory="50"
        android:title="@string/counter"
        android:icon="@drawable/ic_timer"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
