<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.climbershangout.climbershangout.climb.AddRouteActivity$SummaryFragment">

    <EditText
        android:id="@+id/add_route_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:hint="@string/hint_name"/>

    <EditText
        android:id="@+id/add_route_descr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="3"
        android:hint="@string/hint_description" />

    <CheckBox
        android:id="@+id/add_route_open_feet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_route_open_feet"/>

</LinearLayout>
